@@ -22,7 +22,7 @@ import java.io.IOException;
 /**
  * This exception is thrown when the <code>write.lock</code>
  * could not be released.
- * @see Lock#release()
+ * @see Lock#close()
  */
 public class LockReleaseFailedException extends IOException {
   public LockReleaseFailedException(String message) {
